# maya-mcp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: maya-mcp.mod.in  package-manifest.json.in
docs/: API.md  ARCHITECTURE.md  ROADMAP.md  SECURITY.md  UPDATES_AND_RELEASES.md  VISION_RIGGING.md
include/maya_mcp/: main_thread_dispatcher.h  mcp_server.h  python_bridge.h  vp2_capture_command.h
packaging/claude-desktop/: manifest.json.in
python/maya_mcp_runtime/: __init__.py  catalog.py  dispatcher.py  state.py  tools_core.py  tools_domain.py  tools_rig_preview.py  tools_viewport.py  tools_vision.py  ui.py  updater.py
scripts/: build.ps1  common.ps1  configure-autoload.py  configure-clients.ps1  install-module.ps1  install-release.cmd  install-release.cmd.in  install-release.ps1  package-release.ps1  publish-release.ps1  setup-devkits.ps1  setup.ps1  show-connection.ps1  start-client-bridge.ps1  test-bridge.ps1  test-client-configuration.ps1  test-plugin.ps1  test-release-installer.ps1  test-viewport-interactive.ps1
src/: main_thread_dispatcher.cpp  mcp_server.cpp  plugin.cpp  python_bridge.cpp  stdio_bridge.cpp  vp2_capture_command.cpp
tests/: bridge_test.py  interactive_viewport_test.py  rig_operations_test.py  rig_preview_test.py  scene_map_test.py  smoke_test.py  updater_test.py  viewport_contract_test.py  vp2_command_test.py
